--- a/SFML.vcxproj.filters
+++ b/SFML.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Bullet.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NontHeader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
